[package]
name = "rust_lambda_chapter_2"
version = "0.1.0"
authors = ["Nuno Seco"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lambda_runtime = "0.2.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "0.2.3"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
rand = "0.8.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"